// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldSelect 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

.c5 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OEwxNi41OSA4TDE4IDkuNDFMMTIgMTUuNDFMNiA5LjQxTDcuNDEgOFoiIGZpbGw9IiM3MDc3ODEiLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
    id="label-thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c3 "
        id="thumbs-up"
        name="thumbsUp"
        role="select"
      >
        <input
          className="c4 c5"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldSelect with an error validation aligned to the left 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

.c6 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OEwxNi41OSA4TDE4IDkuNDFMMTIgMTUuNDFMNiA5LjQxTDcuNDEgOFoiIGZpbGw9IiM3MDc3ODEiLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #990F14;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
    id="label-thumbs-up"
  >
    👍
  </label>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c4 "
        id="thumbs-up"
        name="thumbsUp"
        role="select"
        validationType="error"
      >
        <input
          className="c5 c6"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="c7"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`A FieldSelect with an error validation aligned to the right 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

.c6 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OEwxNi41OSA4TDE4IDkuNDFMMTIgMTUuNDFMNiA5LjQxTDcuNDEgOFoiIGZpbGw9IiM3MDc3ODEiLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #990F14;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  margin-left: 0.5rem;
  font-size: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
    id="label-thumbs-up"
  >
    👍
  </label>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c4 "
        id="thumbs-up"
        name="thumbsUp"
        role="select"
        validationType="error"
      >
        <input
          className="c5 c6"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="c7"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`A required FieldSelect 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

.c6 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OEwxNi41OSA4TDE4IDkuNDFMMTIgMTUuNDFMNiA5LjQxTDcuNDEgOFoiIGZpbGw9IiM3MDc3ODEiLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #990F14;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
    id="label-thumbs-up"
  >
    👍
    <span
      aria-hidden="true"
      className="c2"
    >
       
      *
    </span>
  </label>
  <div
    className="c0"
  >
    <div
      className="c3"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c4 "
        id="thumbs-up"
        name="thumbsUp"
        required={true}
        role="select"
      >
        <input
          className="c5 c6"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldSelect supports labelWeight 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 400;
  font-size: 0.875rem;
  display: inline-block;
}

.c4 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
}

.c5 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OEwxNi41OSA4TDE4IDkuNDFMMTIgMTUuNDFMNiA5LjQxTDcuNDEgOFoiIGZpbGw9IiM3MDc3ODEiLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c3 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="normal"
    htmlFor="thumbs-up"
    id="label-thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className="c2"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c3 "
        id="thumbs-up"
        name="thumbsUp"
        role="select"
      >
        <input
          className="c4 c5"
          id="listbox-thumbs-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
